# yew_playground

./: Cargo.toml  README.adoc  index.html
assets/style/: stylesheet.scss
backend/: Cargo.toml
backend/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs
src/: main.rs
src/api/: mod.rs
src/components/: footer.rs  plant.rs
