[package]
name = "yew_playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "backend",
    "model"
]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-timers = "0.2.6"
gloo-file = "0.2.3"
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
reqwasm = "0.5.0"
yew_playground_model = { path = "model" }
# plotters = "0.3.1"
