[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.17"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
clap = { version = "4.2.7", features = [ "derive" ] }
